--- a/src/App.module.css
+++ b/src/App.module.css
@@ -9,11 +9,35 @@ body {
 	padding: 2rem;
 	text-align: center;
 	margin-top: 5px;
+	border-radius: 10px;
+	box-shadow: 20px 20px 60px #1f1f1f, -20px -20px 60px #292929;
 }
 .todoElement {
 	display: flex;
-	justify-content: space-between; /* Распределяем элементы равномерно по ширине контейнера */
-	align-items: center; /* Выравниваем элементы по вертикали */
+	align-items: center;
+	gap: 10px;
+	position: relative;
+	margin-top: 25px;
+}
+.checkboxContainer {
+	position: relative;
+}
+.taskContainer {
+	position: relative;
+}
+.svg {
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	left: 0;
+	margin-left: -10px;
+	max-width: 350px; /* Смещение SVG относительно чекбокса */
+}
+.taskText {
+	flex: 1;
+	text-align: left;
+	max-width: 400px;
+	margin-left: 30px;
 }
 .todoText {
 	flex: 1;
@@ -23,16 +47,51 @@ body {
 .todoControl {
 	display: flex;
 	gap: 10px;
+	position: absolute;
+	right: 0;
+}
+.checkbox {
+	position: relative;
+	display: block;
+	width: 100%;
+	height: 60px;
+	overflow: hidden;
+}
+.check {
+	width: 50px;
+	height: 50px;
+	position: absolute;
+	opacity: 0;
+}
+.label {
+	position: relative;
+}
+.labelText {
+	position: absolute;
+	margin-top: 15px;
+}
+.path2 {
+	stroke-dasharray: 1800;
+	stroke-dashoffset: 1800;
+	transition: 1.5s all;
+}
+.check:checked + label svg g path {
+	stroke-dashoffset: 0;
 }
 
 .addButton {
 	margin-left: 20px;
 }
 .inputNewTodo {
-	height: 30px;
+	height: 37px;
 	width: 200px;
 	outline: none;
-	border: 1px solid black;
+	border: 1px transparent;
+	padding-left: 10px;
+	border-radius: 5px;
+}
+.inputNewTodo:hover {
+	border-color: #646cff;
 }
 .inputNewTodo:focus {
 	border-color: black;
