--- a/src/App.module.css
+++ b/src/App.module.css
@@ -7,17 +7,74 @@ body {
 }
 .app {
 	padding: 2rem;
+	width: 500px;
 	text-align: center;
 	margin-top: 5px;
-	border-radius: 10px;
-	box-shadow: 20px 20px 60px #1f1f1f, -20px -20px 60px #292929;
+	border-radius: 34px;
+	background: #242424;
+	box-shadow: 7px 7px 20px #1f1f1f, -7px -7px 20px #292929;
+}
+.header {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 10px 20px;
+	background-color: #242424; /* Цвет фона для header */
+	color: rgb(192, 192, 192); /* Цвет текста в header */
+}
+.filter {
+	display: flex;
+	align-items: center;
+}
+.searchInput {
+	padding: 10px;
+	width: 180px;
+	margin-right: 10px;
+	outline: none;
+	border: none;
+	border-radius: 13px;
+	background: #242424;
+	box-shadow: 7px 7px 13px #1f1f1f, -7px -7px 13px #292929;
+}
+.searchInput:hover {
+	border-radius: 13px;
+	background: #242424;
+	box-shadow: inset 7px 7px 13px #1f1f1f, inset -7px -7px 13px #292929;
+}
+.searchInput:focus {
+	border: none;
+	outline: none;
+	border-radius: 13px;
+	background: #242424;
+	box-shadow: inset 7px 7px 13px #1f1f1f, inset -7px -7px 13px #292929;
+}
+.sortButton {
+	padding: 5px 10px;
+	border: none;
+	border-radius: 13px;
+	cursor: pointer;
+}
+.sortButton:active,
+.sortButton:focus,
+.sortButton.active {
+	border-radius: 13px;
+	background: #242424;
+	box-shadow: inset 7px 7px 13px #1f1f1f, inset -7px -7px 13px #292929;
+}
+.sortButton:hover {
+	border-radius: 13px;
+	background: linear-gradient(145deg, #202020, #272727);
+	box-shadow: 5px 5px 10px #1b1b1b, -5px -5px 10px #2d2d2d;
+}
+.sort {
+	width: 25px;
 }
 .todoElement {
 	display: flex;
 	align-items: center;
 	gap: 10px;
 	position: relative;
-	margin-top: 25px;
+	margin-top: 40px;
 }
 .checkboxContainer {
 	position: relative;
@@ -31,7 +88,7 @@ body {
 	transform: translateY(-50%);
 	left: 0;
 	margin-left: -10px;
-	max-width: 350px; /* Смещение SVG относительно чекбокса */
+	max-width: 350px;
 }
 .taskText {
 	flex: 1;
@@ -83,19 +140,25 @@ body {
 	margin-left: 20px;
 }
 .inputNewTodo {
-	height: 37px;
-	width: 200px;
-	outline: none;
-	border: 1px transparent;
+	height: 42px;
+	width: 350px;
 	padding-left: 10px;
-	border-radius: 5px;
+	border: none;
+	border-radius: 13px;
+	background: #242424;
+	box-shadow: 7px 7px 13px #1f1f1f, -7px -7px 13px #292929;
 }
 .inputNewTodo:hover {
-	border-color: #646cff;
+	border-radius: 13px;
+	background: #242424;
+	box-shadow: inset 7px 7px 13px #1f1f1f, inset -7px -7px 13px #292929;
 }
 .inputNewTodo:focus {
-	border-color: black;
-	background-color: rgb(44, 48, 66);
+	border: none;
+	outline: none;
+	border-radius: 13px;
+	background: #242424;
+	box-shadow: inset 7px 7px 13px #1f1f1f, inset -7px -7px 13px #292929;
 }
 .loader {
 	width: 48px;
